libsdl2 (2.0.5+dfsg1-3) UNRELEASED; urgency=medium

  * 

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Fri, 28 Jul 2017 20:53:42 +0200

libsdl2 (2.0.5+dfsg1-2) unstable; urgency=medium

  * Team Upload.
  * Fix broken link (Closes: #849297)
    - thanks Ben Longbons for the bug report!

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 27 Dec 2016 18:11:10 +0100

libsdl2 (2.0.5+dfsg1-1) unstable; urgency=low

  * New upstream release
    - Drop (all) debian/patches, there had been originally backported from
      upstream or are now applied there:
      * replace-relicenced-SDL_qsort.patch
      * SDL2_dont_propagate_lpthread.diff (included in 2.0.4 already, but not
        dropped then)
      * bug_822210_fix_sdl2-config.cmake_whitespace.patch
  * d/control: add Build-Depend on wayland-protocols, needed by the new version

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Wed, 02 Nov 2016 01:20:36 +0100

libsdl2 (2.0.4+dfsg2-1) unstable; urgency=medium

  [ Manuel A. Fernandez Montecelo ]
  * Bump Policy Standards-Version to 3.9.8 (no changes needed)
  * Drop -dbg package
  * Fixes for reproducible builds:
    - timestamps_in_tarball, use --clamp-mtime with changelog as date
    - timestamps_in_gzip_headers, export GZIP="-9n"
    - sort files by name when creating "examples.tar.gz"
  * Add depends from -doc on libjs-jquery, use symlink instead of embedded
    copy
  * Ensure proper migration from -dbg package using "dh_strip
    --dbgsym-migration"
  * Bump debhelper dependency for --dbgsym-migration
  * Enable ibus support (Closes: #822924)
  * d/patches:
    - Add bug_822210_fix_sdl2-config.cmake_whitespace.patch: Fix upstream
      problem with sdl2-config.cmake (Closes: #822210)

  [ Gianfranco Costamagna ]
  * Fix insecure VCS fields.
  * Re-import the same tarball without SDL-qsort.c file.
    - the license issue is fixed already, because the original
      maintainer relicensed it (so we are adding it as a patch now)