@@ -8,8 +8,7 @@ Uploaders:
  Felix Geyer <fgeyer@debian.org>
 Standards-Version: 3.9.8
 Build-Depends:
- debhelper (>= 9.20160114),
- dh-autoreconf,
+ debhelper (>= 10~),
  libasound2-dev [linux-any],
  libdbus-1-dev,
  libegl1-mesa-dev [!hurd-any],
