@@ -39,34 +39,7 @@ SOURCE_DATE := $(shell dpkg-parsechangelog --show-field=Date)
 
 
 %:
-	dh $@ --with autoreconf --parallel
-
-override_dh_autoreconf:
-        # aclocal needs to include in specific order, and/or it seems that
-        # doesn't try to find .m4 files in /usr/share/aclocal at all.  Updates
-        # to both .m4 files and ltmain.sh (aclocal and libtoolize) are necessary
-        # to support new architectures aarch64 (arm64) and powerpc64le, and this
-        # seems the more straight way to achieve it.
-        #
-        # An alternative would be to just build-depend on libesd0-dev,
-        # libasound2-dev and libltdl-dev to provide the files "esd.m4 alsa.m4
-        # ltdl.m4" in /usr/share/aclocal, and not use the local "acinclude" dir
-        # at all, but this pull even more dependencies, and unneeded ones.
-        #
-        # Another equivalent alternative, but more verbose:
-        #
-        # ACLOCAL="cat acinclude/esd.m4 acinclude/alsa.m4 acinclude/ltdl.m4 \
-        #           /usr/share/aclocal/libtool.m4 \
-        #           /usr/share/aclocal/ltoptions.m4 \
-        #           /usr/share/aclocal/ltversion.m4 \
-        #           /usr/share/aclocal/ltsugar.m4 >> aclocal.m4; aclocal"
-        #          LIBTOOLIZE="libtoolize -f -i" dh_autoreconf --as-needed
-        #          autoreconf -- -I acinclude -f -i
-	AUTOHEADER=true ACLOCAL="aclocal --force --install -I /usr/share/aclocal/ -I acinclude" LIBTOOLIZE="libtoolize -fi" dh_autoreconf --as-needed
-        # To verify that it worked, grep should find these strings:
-        #
-        #rgrep -i aarch64 .
-        #rgrep -r powerpc64le .
+	dh $@
 
 override_dh_auto_configure:
 	dh_auto_configure -- $(confflags)
